# Real-Time-Stereo-Matching-

./: CMakeLists.txt  README.md  dense_stereo_matching.sublime-project  talk_topics.docx
applications/: CMakeLists.txt  cv_gui_test.cpp  patch_match_stereo.cpp  reconstruct_3D_point_cloud.cpp
applications/adaptive_weight_stereo_matcher/: GPUAdaptiveWeightStereoMatcher.cpp  GPUAdaptiveWeightStereoMatcher.h  main.cpp
applications/const_win_stereo_matcher/: GPUConstWinStereoMatcher.cpp  GPUConstWinStereoMatcher.h  main.cpp
applications/experiments/: gaussian_blur.cpp  sobel.cpp
applications/image_blender/: main.cpp
applications/image_converter/: main.cpp
applications/images/Checkerboard_Baumer/: camera_params.yml  extrinsics.yml  intrinsics.yml  stereo_calib.xml
applications/images/stereo_chessboard/: img_list.xml
applications/images/syntim_stereo/: cam_Angle_d  cam_Angle_g  cam_Aout_d  cam_Aout_g  cam_Baballe_d  cam_Baballe_g  cam_BalMire_d  cam_BalMire_g  cam_BalMouss_d  cam_BalMouss_g  cam_BatInria_d  cam_BatInria_g  cam_BatSynt_d  cam_BatSynt_g  cam_BilletR_d  cam_BilletR_g  cam_Billet_d  cam_Billet_g  cam_Color_d  cam_Color_g  cam_CubeR_d  cam_CubeR_g  cam_Cube_d  cam_Cube_g  cam_GrRub_d  cam_GrRub_g  cam_JallutUniAmb_d  cam_JallutUniAmb_g  cam_Jallut_d  cam_Jallut_g  cam_LaMire_d  cam_LaMire_g  cam_Lego_d  cam_Lego_g  cam_Mire_d  cam_Mire_g  cam_Money_d  cam_Money_g  cam_NBuste_d  cam_NBuste_g  (+20 more)
applications/non_reworked_examples/: compute_image_differences_using_image_2d.cpp
applications/opencv_stereo_calib/: stereo_calib.cpp
applications/pipeline_stereo_matcher/: main.cpp
applications/rectify_chessboard/: main.cpp
applications/simple_examples/: compute_image_differences_using_buffers.cpp  window_based_image_binarization.cpp
applications/simple_stereo_matcher/: Application.cpp  Application.hpp  Application_command_line_argument_definition.cpp  Application_gui_callback_functions.cpp  Application_gui_definition.cpp  Application_visualization.cpp  main.cpp
applications/simple_tasks/: gaussion_filter.cpp  new_patch_match.cpp  patch_match.cpp  patch_match.h  reconstruct_3D_points_GPU.cpp  sobel_filter.cpp
applications/stereo_rig_streamer/: main.cpp
calibration/summaery_2019/color_calibration/: camera_params.yml  extrinsics.yml  intrinsics.yml
cmake/modules/: FindCUDA.cmake
framework/: CMakeLists.txt
framework/core/: init_opencl.cpp  init_opencl.h  rgbd_stream.cpp  rgbd_stream.h  stereo_camera.cpp  stereo_camera.h  utils.cpp  utils.h
framework/image_processing/: GPUImageBlender.h  GPUImageProcessors.h
framework/image_processing/base/: GPU3DReconstructor.cpp  GPU3DReconstructor.h  GPUBaseImageProcessor.cpp  GPUBaseImageProcessor.h  GPUImageProcessorBinary.cpp  GPUImageProcessorBinary.h  GPUImageProcessorUnary.cpp  GPUImageProcessorUnary.h
framework/image_processing/binary/: GPUAdCensusStereoMatcher.cpp  GPUAdCensusStereoMatcher.h  GPUImageBlender.cpp  GPUImageBlender.h  GPUPatchMatchStereoMatcher.cpp  GPUPatchMatchStereoMatcher.h  GPUPointcloudReconstructor.cpp  GPUPointcloudReconstructor.h  GPUStereoMatcher.cpp  GPUStereoMatcher.h  GPUStereoMatcherNCC.cpp  GPUStereoMatcherNCC.h
framework/image_processing/unary/: GPUImageConverter.cpp  GPUImageConverter.h
framework/io/: GeometrySender.cpp  GeometrySender.h
framework/libBaumer/: BCamera.cpp  BCamera.h  BSystem.cpp  CMDParser.cpp  CMDParser.h  Dropped Text.txt  FlipH.cpp  FlipH.h  FlipV.cpp  FlipV.h  PNM.cpp  PNM.h  bgapi.h  bgapidef.hpp  bgapiresult.h  ggpixel.cpp  ggpixel.h  image.cpp  image.h  jpeg.cpp  jpg.cpp  sys_gige.so.16
framework/protocols/sgtp/: SGTP.h
framework/protocols/sgtp/versions/v0.x.x/: streaming_geometry_transmission_protocol_v_0_2_3.h
kernels/: patch_match_stereo.cl
kernels/experiments/: gaussian_blur.cl  mask.py  sobel.cl  sobel_color.cl  sobel_gs.cl
kernels/image_processing/binary/3d_reconstruction/: reconstruct_3D_geometry_from_disparity.cl
kernels/image_processing/binary/blending/: addition_3x8.cl  difference_3x8.cl  multiplication_3x8.cl
kernels/image_processing/binary/stereo_matching/: adcensus.cl  adcensus_cost_init.cl
kernels/image_processing/binary/stereo_matching/aggregate_cost_functions/: compute_adapt_weight_grey.cl  const_win_cost_aggregate.cl
kernels/image_processing/binary/stereo_matching/cost_functions/: SAD_green_3x8.cl  SAD_lab_3x32f.cl
kernels/image_processing/binary/stereo_matching/matching_algorithms/: best_disp_winner_take_all.cl  compute_SAD_cost_green_3x8.cl  image_ncc.cl  simple_ASW_lab_3x32f.cl  simple_SAD_grayscale_local_memory_1x8.cl  simple_SAD_green_3x8.cl  simple_SAD_lab_3x32f.cl  simple_census_grayscale_1x8.cl  simple_patch_match.cl
kernels/image_processing/unary/conversion/: bgr_3x8_buffer_image_copy.cl  bgr_3x8_to_binary_3x8_conversion.cl  bgr_3x8_to_grayscale_1x8_conversion.cl  bgr_3x8_to_grayscale_1x8_image_conversion.cl  bgr_3x8_to_grayscale_3x8_conversion.cl  bgr_3x8_to_lab_3x16f_conversion.cl  bgr_3x8_to_lab_3x32f_conversion.cl  bgr_3x8_to_rgb_3x8_conversion.cl  bgr_gray_buffer_image_copy.cl  image_to_buffer_conversion.cl
kernels/image_processing/unary/misc/: image_mean.cl  image_variance.cl
kernels/non_reworked_example_kernels/: image_difference_kernel_using_image_2d.cl
kernels/simple_example_kernels/: image_difference_kernel_using_buffers.cl  window_based_image_binarization.cl
kernels/simple_task_kernels/: gaussian_blur.cl  simple_patch_match.cl  sobel_filter.cl
reading/Photogrammetric_Computer_Vision/: Computer_Vision_Algorithms_and_Applications.txt
reading/khanh_ha/: adcensus_todo.md
reading/khanh_ha/courses/: courses
reading/khanh_ha/experiments/: adcensus_error_grad_cost.txt  adcensus_error_gray_cost.txt
reading/khanh_ha/steoreo_matching_slides/: slides
utils/: baumer_setup_hebbel.sh
